[tool.poetry]
name = "video-stream"
version = "0.1.0"
description = ""
authors = ["Yaroslav <yaroslavborysko@gmail.com>"]
readme = "README.md"
packages = [{include = "video_stream"}]

[tool.poetry.dependencies]
python = "^3.9"
opencv-python = "^4.7.0.72"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

